--- a/v1/packages/OrdersService/package.json
+++ b/v1/packages/OrdersService/package.json
@@ -1,19 +1,31 @@
 {
-  "name": "emailservice",
+  "name": "ordersservice",
   "version": "1.0.0",
-  "description": "Service that handles emails notifications",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server",
-    "test": "mocha tests --recursive --timeout 15000 --exit"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dimos Botsaris <botsaris.d@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^6.12.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "kafkajs": "^1.15.0",
+    "lodash": "^4.17.15",
     "mailgun-js": "^0.22.0",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "5.21.10",
+    "throw-http-errors": "^2.0.0",
     "validator": "^13.5.2",
     "winston": "^3.3.3"
   },
