--- a/v1/packages/OrdersService/package.json
+++ b/v1/packages/OrdersService/package.json
@@ -26,6 +26,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "5.21.10",
     "throw-http-errors": "^2.0.0",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2",
     "winston": "^3.3.3"
   },
