--- a/v1/packages/OrdersService/package.json
+++ b/v1/packages/OrdersService/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ordersservice",
   "version": "1.0.0",
-  "description": "",
+  "description": "Handles order microservice",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
