--- a/v1/packages/ShippingService/package.json
+++ b/v1/packages/ShippingService/package.json
@@ -9,11 +9,19 @@
   "author": "Dimos Botsaris <botsaris.d@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "kafkajs": "^1.15.0",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "throw-http-errors": "^2.0.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "5.21.10",
     "uuid": "^8.3.2",
     "validator": "^13.5.2",
     "winston": "^3.3.3"
