--- a/v1/packages/UserService/src/main/resources/application.properties
+++ b/v1/packages/UserService/src/main/resources/application.properties
@@ -1,23 +1,15 @@
 ## Database
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost/EDA-UserService
-%prod.quarkus.datasource.username=postgres
-%prod.quarkus.datasource.password=secret
-%prod.quarkus.datasource.db-kind=postgresql
-%prod.quarkus.hibernate-orm.jdbc.timezone=UTC
-quarkus.datasource.devservices.image-name=postgres:12.5
-
-%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost/EDA-UserService
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/user-db
 quarkus.datasource.username=postgres
 quarkus.datasource.password=secret
-%dev.quarkus.datasource.db-kind=postgresql
-%dev.quarkus.hibernate-orm.jdbc.timezone=UTC
-%dev.quarkus.hibernate-orm.log.sql=true
-#%dev.quarkus.hibernate-orm.sql-load-script=import-dev.sql
-#%dev.quarkus.hibernate-orm.database.generation=none
-
+quarkus.datasource.db-kind=postgresql
+quarkus.hibernate-orm.jdbc.timezone=UTC
+quarkus.hibernate-orm.log.sql=true
+#quarkus.hibernate-orm.sql-load-script=import-dev.sql
+#quarkus.hibernate-orm.database.generation=none
 
 ## Database Migrations
 quarkus.flyway.migrate-at-start=true
 #%test.quarkus.flyway.migrate-at-start=false
-quarkus.flyway.clean-at-start=false
+quarkus.flyway.clean-at-start=true
 quarkus.flyway.baseline-on-migrate=true
