--- a/v1/packages/InventoryService/package.json
+++ b/v1/packages/InventoryService/package.json
@@ -24,8 +24,10 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "^8.0.9",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.1.1",
+    "kafkajs": "^1.15.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
