--- a/v1/packages/OrdersService/package.json
+++ b/v1/packages/OrdersService/package.json
@@ -4,7 +4,7 @@
   "description": "Handles order microservice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "node src/server.js"
   },
   "author": "Dimos Botsaris <botsaris.d@gmail.com>",
   "license": "ISC",
