--- a/v1/packages/OrderService/package.json
+++ b/v1/packages/OrderService/package.json
@@ -4,7 +4,8 @@
   "description": "Handles order microservice",
   "main": "index.js",
   "scripts": {
-    "start:dev": "node src/server.js"
+    "start": "node src/server",
+    "start:dev": "cp .local.env .env && node src/server.js"
   },
   "author": "Dimos Botsaris <botsaris.d@gmail.com>",
   "license": "ISC",
