--- a/v1/kubernetes/OrderService/service.yaml
+++ b/v1/kubernetes/OrderService/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: tf-tutorial
+  namespace: eshop-eda
   labels:
     app: order-service
   name: order-service
 spec:
   type: NodePort
   ports:
-  - port: 5050
-    targetPort: 5050
+  - port: 3000
+    targetPort: 3000
     protocol: TCP
   selector:
     name: order-backend
