EDA_32: add secrets

--- a/v1/kubernetes/OrderService/deployment.yaml
+++ b/v1/kubernetes/OrderService/deployment.yaml
@@ -22,4 +22,7 @@ spec:
         ports:
           - containerPort: 3000
             protocol: TCP
+        envFrom:
+          - secretRef:
+            name: orders-service-secrets
             
