--- a/v1/kubernetes/PaymentService/deployment.yaml
+++ b/v1/kubernetes/PaymentService/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         name: payment-backend
     spec:
       containers:
-      - name: payment-backend-service
+      - name: payment-api
         imagePullPolicy: Always
         image: eldimious/payment-eda-v1:latest
         ports:
