--- a/v1/kubernetes/ShippingService/deployment.yaml
+++ b/v1/kubernetes/ShippingService/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         name: shipment-backend
     spec:
       containers:
-      - name: shipment-backend-service
+      - name: shipment-api
         imagePullPolicy: Always
         image: eldimious/shipment-eda-v1:latest
         ports:
