EDA_32: improve secrets

--- a/v1/kubernetes/EmailService/temp-secret.yaml
+++ b/v1/kubernetes/EmailService/temp-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: email-service-secrets
+  namespace: eshop-eda
 type: Opaque
 data:
   KAFKA_BROKER: 
