--- a/v1/kubernetes/PaymentService/temp-secret.yaml
+++ b/v1/kubernetes/PaymentService/temp-secret.yaml
@@ -3,7 +3,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: payments-service-secret
+  name: payments-service-secrets
+  namespace: eshop-eda
 type: Opaque
 data:
   KAFKA_BROKER: 
