--- a/v1/packages/UserService/src/main/resources/application.properties
+++ b/v1/packages/UserService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Database
-quarkus.datasource.jdbc.url=jdbc:postgresql:///${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:user-db}
+quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:user-db}
 quarkus.datasource.username=${DB_USER:postgres}
 quarkus.datasource.password=${DB_PASS:secret}
 quarkus.datasource.db-kind=postgresql
