--- a/v1/packages/WarehouseService/docker-compose.yml
+++ b/v1/packages/WarehouseService/docker-compose.yml
@@ -1,14 +1,20 @@
 version: '3.8'
 services:
+  warehouse-service:
+    build: .
+    ports:
+      - '3000:3000'
+    environment:
+      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
   postgres:
     image: postgres:13.2
     ports:
       - '5432:5432'
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: inventory-db
+      POSTGRES_USER:
+      POSTGRES_PASSWORD:
+      POSTGRES_DB:
     volumes:
       - postgres:/var/lib/postgresql/data
 volumes:
