--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -1,13 +1,21 @@
 version: "3.8"
 services:
-  kafka:
-    image: lensesio/box
-    restart: on-failure
+  zookeeper:
+    image: wurstmeister/zookeeper:latest
     ports:
-      - "3030:3030"
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka:latest
+    ports:
       - "9092:9092"
-      - "8081:8081"
+    links:
+      - zookeeper
     environment:
-      SAMPLEDATA: 0
-      ADV_HOST: host.docker.internal
-      EULA:
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_DELETE_TOPIC_ENABLE: 'true'
+      KAFKA_CREATE_TOPICS: "Orders:1:1,Payments:1:1,Shipments:1:1,Warehouse:1:1"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./testHelpers/kafka/server-jaas.conf:/opt/kafka/config/server-jaas.conf:ro,z
