--- a/v1/services/WarehouseService/docker-compose.yml
+++ b/v1/services/WarehouseService/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       - '5432:5432'
     restart: always
     environment:
-      POSTGRES_USER:
-      POSTGRES_PASSWORD:
-      POSTGRES_DB:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: inventory-db
     volumes:
       - postgres:/var/lib/postgresql/data
 volumes:
