--- a/v3/services/OrderService/src/main/resources/application.properties
+++ b/v3/services/OrderService/src/main/resources/application.properties
@@ -3,7 +3,7 @@ mp.messaging.outgoing.orders-out.connector=smallrye-kafka
 mp.messaging.outgoing.orders-out.topic=Orders
 mp.messaging.outgoing.orders-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 mp.messaging.outgoing.orders-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-kafka.producer.bootstrap.servers=kafka:9092
+kafka.producer.bootstrap.servers=localhost:9092
 kafka.enable.idempotence=true
 kafka.retries=2147483647
 kafka.acks=all
