EDA-12: Use quarkus kafka streams plugin to build topology. Improve code structure

--- a/v3/services/WarehouseService/src/main/resources/application.properties
+++ b/v3/services/WarehouseService/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 quarkus.http.port=5050
+
+quarkus.kafka.devservices.enabled=false
+quarkus.kafka-streams.application-id=warehouse-service
+quarkus.kafka-streams.topics=Orders,OrdersValidations
+quarkus.kafka-streams.application-server=localhost:5050
+quarkus.kafka-streams.bootstrap-servers=localhost:9092
+
+kafka.bootstrap-servers=localhost:9092
+
+# streams options
+kafka-streams.cache.max.bytes.buffering=10240
+kafka-streams.commit.interval.ms=1000
+kafka-streams.metadata.max.age.ms=500
+kafka-streams.auto.offset.reset=earliest
+kafka-streams.metrics.recording.level=DEBUG
+kafka-streams.consumer.heartbeat.interval.ms=200
+# Use sub-folder of embedded broker, so it gets cleaned by KafkaResource between re-runs
+# This does not work for native tests, manually clean-up /tmp/kafka-streams/temperature-aggregator
+%test.kafka-streams.state.dir=target/data/kafka-data/stores
