EDA-12: add payments service

--- a/v3/services/OrderService/src/main/resources/application.properties
+++ b/v3/services/OrderService/src/main/resources/application.properties
@@ -18,6 +18,7 @@ kafka.acks=all
 kafka.client.id=order-service-producer
 
 # streams options
+kafka-streams.processing.guarantee=exactly_once
 kafka-streams.cache.max.bytes.buffering=10240
 kafka-streams.commit.interval.ms=1000
 kafka-streams.metadata.max.age.ms=500
