--- a/v3/services/PaymentService/src/main/resources/application.properties
+++ b/v3/services/PaymentService/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-quarkus.http.port=8082
+quarkus.http.port=8083
 
 quarkus.kafka.devservices.enabled=false
-quarkus.kafka-streams.application-id=warehouse-service
-quarkus.kafka-streams.topics=Orders,OrdersValidations
-quarkus.kafka-streams.application-server=localhost:8082
+quarkus.kafka-streams.application-id=payment-service
+quarkus.kafka-streams.topics=Orders,Payments
+quarkus.kafka-streams.application-server=localhost:8083
 quarkus.kafka-streams.bootstrap-servers=localhost:9092
-
 kafka.bootstrap-servers=localhost:9092
 
 # streams options
