EDA-12: working version emailservice

--- a/v3/services/EmailService/src/main/resources/application.properties
+++ b/v3/services/EmailService/src/main/resources/application.properties
@@ -16,7 +16,9 @@ kafka-streams.consumer.heartbeat.interval.ms=200
 # Use sub-folder of embedded broker, so it gets cleaned by KafkaResource between re-runs
 # This does not work for native tests, manually clean-up /tmp/kafka-streams/temperature-aggregator
 %test.kafka-streams.state.dir=target/data/kafka-data/stores
+# mailgun
 mailgun/mp-rest/url=https://api.mailgun.net/v3/${QUARKUS_MAILGUN_DOMAIN_NAME}
 mailgun/mp-rest/connectTimeout=60000
 mailgun/mp-rest/readTimeout=60000
 mailgun/mp-rest/maxRetries=3
+email.sender=${EMAIL_SENDER:dimosthenis.botsaris@arconsis.com}
