--- a/v1/services/docker-compose.yml
+++ b/v1/services/docker-compose.yml
@@ -19,3 +19,17 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./testHelpers/kafka/server-jaas.conf:/opt/kafka/config/server-jaas.conf:ro,z
+  postgres:
+    image: postgres:13.2
+    ports:
+      - '5432:5432'
+    restart: always
+    environment:
+      POSTGRES_USER: orders
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: orders-db
+    volumes:
+      - postgres:/var/lib/postgresql/data
+      
+volumes:
+  postgres: ~
