EDA-61: Removing obsolete types from events

--- a/v1/services/OrderService/src/main/resources/application.properties
+++ b/v1/services/OrderService/src/main/resources/application.properties
@@ -18,7 +18,7 @@ mp.messaging.incoming.order-validation-in.key.deserializer=org.apache.kafka.comm
 
 mp.messaging.incoming.payments-in.connector=smallrye-kafka
 mp.messaging.incoming.payments-in.topic=Payments
-mp.messaging.incoming.payments-in.value.deserializer=com.arconsis.domain.payments.PaymentMessageDeserializer
+mp.messaging.incoming.payments-in.value.deserializer=com.arconsis.domain.payments.PaymentDeserializer
 mp.messaging.incoming.payments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 ## producer options
