EDA-61: remove payload from messages

--- a/v1/services/OrderService/src/main/resources/application.properties
+++ b/v1/services/OrderService/src/main/resources/application.properties
@@ -8,12 +8,12 @@ mp.messaging.outgoing.orders-out.key.serializer=org.apache.kafka.common.serializ
 
 mp.messaging.incoming.shipment-in.connector=smallrye-kafka
 mp.messaging.incoming.shipment-in.topic=Shipments
-mp.messaging.incoming.shipment-in.value.deserializer=com.arconsis.domain.shipments.ShipmentMessageDeserializer
+mp.messaging.incoming.shipment-in.value.deserializer=com.arconsis.domain.shipments.ShipmentDeserializer
 mp.messaging.incoming.shipment-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 mp.messaging.incoming.order-validation-in.connector=smallrye-kafka
 mp.messaging.incoming.order-validation-in.topic=OrdersValidations
-mp.messaging.incoming.order-validation-in.value.deserializer=com.arconsis.domain.ordersvalidations.OrderValidationMessageDeserializer
+mp.messaging.incoming.order-validation-in.value.deserializer=com.arconsis.domain.ordersvalidations.OrderValidationDeserializer
 mp.messaging.incoming.order-validation-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 mp.messaging.incoming.payments-in.connector=smallrye-kafka
