--- a/v1/services/docker-compose.yml
+++ b/v1/services/docker-compose.yml
@@ -15,21 +15,33 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
       KAFKA_DELETE_TOPIC_ENABLE: 'true'
-      KAFKA_CREATE_TOPICS: "Orders:1:1,Payments:1:1,Shipments:1:1,Warehouse:1:1"
+      KAFKA_CREATE_TOPICS: "Orders:1:1,Payments:1:1,Shipments:1:1,OrdersValidation:1:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./testHelpers/kafka/server-jaas.conf:/opt/kafka/config/server-jaas.conf:ro,z
-  postgres:
+  orders-db:
     image: postgres:13.2
     ports:
       - '5432:5432'
     restart: always
     environment:
-      POSTGRES_USER: orders
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: orders-db
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - orders-postgres:/var/lib/postgresql/data
+  warehouse-db:
+    image: postgres:13.2
+    ports:
+      - '5433:5432'
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: warehouse-db
+    volumes:
+      - warehouse-postgres:/var/lib/postgresql/data
       
 volumes:
-  postgres: ~
+  orders-postgres: ~
+  warehouse-postgres: ~
