EDA-61: Improve docker compose to allow creating multiple databases under port 5432. Add support for Inventory CRUD operations.

--- a/v1/services/OrderService/src/main/resources/application.properties
+++ b/v1/services/OrderService/src/main/resources/application.properties
@@ -32,7 +32,7 @@ kafka.bootstrap-servers=localhost:9092
 
 ## Database
 quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:orders-db}
-quarkus.datasource.username=${POSTGRES_USER:orders}
+quarkus.datasource.username=${POSTGRES_USER:postgres}
 quarkus.datasource.password=${POSTGRES_PASSWORD:secret}
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.jdbc.timezone=UTC
