--- a/v1/services/WarehouseService/src/main/resources/application.properties
+++ b/v1/services/WarehouseService/src/main/resources/application.properties
@@ -1,21 +1,35 @@
 quarkus.http.port=8082
 
 quarkus.kafka.devservices.enabled=false
-quarkus.kafka-streams.application-id=warehouse-service
-quarkus.kafka-streams.topics=Orders,OrdersValidations
-quarkus.kafka-streams.application-server=localhost:8082
-quarkus.kafka-streams.bootstrap-servers=localhost:9092
+mp.messaging.outgoing.order-validation-out.connector=smallrye-kafka
+mp.messaging.outgoing.order-validation-out.topic=OrdersValidations
+mp.messaging.outgoing.order-validation-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+mp.messaging.outgoing.order-validation-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+mp.messaging.incoming.order-in.connector=smallrye-kafka
+mp.messaging.incoming.order-in.topic=Orders
+mp.messaging.incoming.order-in.value.deserializer=com.arconsis.domain.orders.OrdersDeserializer
+mp.messaging.incoming.order-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+## producer options
+kafka.producer.bootstrap.servers=localhost:9092
+kafka.enable.idempotence=true
+#kafka.retries=2147483647
+kafka.acks=all
+kafka.client.id=warehouse-service-producer
 
 kafka.bootstrap-servers=localhost:9092
 
-# streams options
-kafka-streams.processing.guarantee=exactly_once
-kafka-streams.cache.max.bytes.buffering=10240
-kafka-streams.commit.interval.ms=1000
-kafka-streams.metadata.max.age.ms=500
-kafka-streams.auto.offset.reset=earliest
-kafka-streams.metrics.recording.level=DEBUG
-kafka-streams.consumer.heartbeat.interval.ms=200
-# Use sub-folder of embedded broker, so it gets cleaned by KafkaResource between re-runs
-# This does not work for native tests, manually clean-up /tmp/kafka-streams/temperature-aggregator
-%test.kafka-streams.state.dir=target/data/kafka-data/stores
+## Database
+quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:warehouse-db}
+quarkus.datasource.username=${POSTGRES_USER:postgres}
+quarkus.datasource.password=${POSTGRES_PASSWORD:secret}
+quarkus.datasource.db-kind=postgresql
+quarkus.hibernate-orm.jdbc.timezone=UTC
+quarkus.hibernate-orm.log.sql=true
+
+## Database Migrations
+quarkus.flyway.migrate-at-start=true
+#%test.quarkus.flyway.migrate-at-start=false
+quarkus.flyway.clean-at-start=false
+quarkus.flyway.baseline-on-migrate=true
