--- a/v1/services/WarehouseService/src/main/resources/application.properties
+++ b/v1/services/WarehouseService/src/main/resources/application.properties
@@ -6,6 +6,11 @@ mp.messaging.outgoing.order-validation-out.topic=OrdersValidations
 mp.messaging.outgoing.order-validation-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 mp.messaging.outgoing.order-validation-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 
+mp.messaging.outgoing.shipments-out.connector=smallrye-kafka
+mp.messaging.outgoing.shipments-out.topic=Shipments
+mp.messaging.outgoing.shipments-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+mp.messaging.outgoing.shipments-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+
 mp.messaging.incoming.order-in.connector=smallrye-kafka
 mp.messaging.incoming.order-in.topic=Orders
 mp.messaging.incoming.order-in.value.deserializer=com.arconsis.domain.orders.OrdersDeserializer
