EDA-61: fix email service deserializer

--- a/v1/services/EmailService/src/main/resources/application.properties
+++ b/v1/services/EmailService/src/main/resources/application.properties
@@ -1,15 +1,18 @@
 quarkus.http.port=8085
+
 quarkus.kafka.devservices.enabled=false
 
+# Orders Topic
 mp.messaging.incoming.orders-in.connector=smallrye-kafka
 mp.messaging.incoming.orders-in.topic=Orders
-mp.messaging.incoming.orders-in.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
-mp.messaging.incoming.orders-in.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.domain.orders.OrdersDeserializer
+mp.messaging.incoming.orders-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
+# Shipments Topic
 mp.messaging.incoming.shipment-in.connector=smallrye-kafka
 mp.messaging.incoming.shipment-in.topic=Shipments
-mp.messaging.incoming.shipment-in.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
-mp.messaging.incoming.shipment-in.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.incoming.shipment-in.value.deserializer=com.arconsis.domain.shipments.ShipmentsEventsDeserializer
+mp.messaging.incoming.shipment-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 kafka.bootstrap-servers=localhost:9092
 
