EDA-61: fix email service deserializer

--- a/v1/services/OrderService/src/main/resources/application.properties
+++ b/v1/services/OrderService/src/main/resources/application.properties
@@ -6,10 +6,10 @@ mp.messaging.outgoing.orders-out.topic=Orders
 mp.messaging.outgoing.orders-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 mp.messaging.outgoing.orders-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 
-mp.messaging.incoming.shipment-in.connector=smallrye-kafka
-mp.messaging.incoming.shipment-in.topic=Shipments
-mp.messaging.incoming.shipment-in.value.deserializer=com.arconsis.domain.shipments.ShipmentDeserializer
-mp.messaging.incoming.shipment-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.shipments-in.connector=smallrye-kafka
+mp.messaging.incoming.shipments-in.topic=Shipments
+mp.messaging.incoming.shipments-in.value.deserializer=com.arconsis.domain.shipments.ShipmentDeserializer
+mp.messaging.incoming.shipments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 mp.messaging.incoming.order-validation-in.connector=smallrye-kafka
 mp.messaging.incoming.order-validation-in.topic=OrdersValidations
