--- a/v1/services/EmailService/src/main/resources/application.properties
+++ b/v1/services/EmailService/src/main/resources/application.properties
@@ -9,10 +9,10 @@ mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.domain.orders.Or
 mp.messaging.incoming.orders-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 # Shipments Topic
-mp.messaging.incoming.shipment-in.connector=smallrye-kafka
-mp.messaging.incoming.shipment-in.topic=Shipments
-mp.messaging.incoming.shipment-in.value.deserializer=com.arconsis.domain.shipments.ShipmentsEventsDeserializer
-mp.messaging.incoming.shipment-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.shipments-in.connector=smallrye-kafka
+mp.messaging.incoming.shipments-in.topic=Shipments
+mp.messaging.incoming.shipments-in.value.deserializer=com.arconsis.domain.shipments.ShipmentsEventsDeserializer
+mp.messaging.incoming.shipments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 kafka.bootstrap-servers=localhost:9092
 
