EDA-61: fix CompletionStage

--- a/v1/services/EmailService/src/main/resources/application.properties
+++ b/v1/services/EmailService/src/main/resources/application.properties
@@ -14,7 +14,7 @@ mp.messaging.incoming.shipments-in.topic=Shipments
 mp.messaging.incoming.shipments-in.value.deserializer=com.arconsis.domain.shipments.ShipmentsEventsDeserializer
 mp.messaging.incoming.shipments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-kafka.bootstrap-servers=localhost:9092
+kafka.bootstrap.servers=localhost:9092
 
 # mailgun
 mailgun/mp-rest/url=https://api.mailgun.net/v3/${QUARKUS_MAILGUN_DOMAIN_NAME}
