--- a/v1/services/OrderService/src/main/resources/application.properties
+++ b/v1/services/OrderService/src/main/resources/application.properties
@@ -28,7 +28,7 @@ kafka.enable.idempotence=true
 kafka.acks=all
 kafka.client.id=order-service-producer
 
-kafka.bootstrap-servers=localhost:9092
+kafka.bootstrap.servers=localhost:9092
 
 ## Database
 quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:orders-db}
