--- a/v1/services/UserService/src/main/resources/application.properties
+++ b/v1/services/UserService/src/main/resources/application.properties
@@ -20,6 +20,8 @@ kafka.enable.idempotence=true
 kafka.acks=all
 kafka.client.id=users-service-producer
 
+kafka.bootstrap.servers=localhost:9092
+
 ## Database Migrations
 quarkus.flyway.migrate-at-start=true
 #%test.quarkus.flyway.migrate-at-start=false
