EDA-71: rpc among emailservice and userservice

--- a/v1/services/EmailService/src/main/resources/application.properties
+++ b/v1/services/EmailService/src/main/resources/application.properties
@@ -11,7 +11,7 @@ mp.messaging.incoming.orders-in.key.deserializer=org.apache.kafka.common.seriali
 # Shipments Topic
 mp.messaging.incoming.shipments-in.connector=smallrye-kafka
 mp.messaging.incoming.shipments-in.topic=Shipments
-mp.messaging.incoming.shipments-in.value.deserializer=com.arconsis.domain.shipments.ShipmentsEventsDeserializer
+mp.messaging.incoming.shipments-in.value.deserializer=com.arconsis.domain.shipments.ShipmentsDeserializer
 mp.messaging.incoming.shipments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 kafka.bootstrap.servers=localhost:9092
@@ -22,3 +22,9 @@ mailgun/mp-rest/connectTimeout=60000
 mailgun/mp-rest/readTimeout=60000
 mailgun/mp-rest/maxRetries=3
 email.sender=${EMAIL_SENDER:dimosthenis.botsaris@arconsis.com}
+
+# users-api
+users-api/mp-rest/url=localhost:8081/users
+users-api/mp-rest/connectTimeout=60000
+users-api/mp-rest/readTimeout=60000
+users-api/mp-rest/maxRetries=3
