--- a/v1/services/EmailService/src/main/resources/application.properties
+++ b/v1/services/EmailService/src/main/resources/application.properties
@@ -18,7 +18,7 @@ mailgun/mp-rest/maxRetries=3
 email.sender=${EMAIL_SENDER:dimosthenis.botsaris@arconsis.com}
 
 # users-api
-users-api/mp-rest/url=localhost:8081/users
+users-api/mp-rest/url=http://localhost:8081/users
 users-api/mp-rest/connectTimeout=60000
 users-api/mp-rest/readTimeout=60000
 users-api/mp-rest/maxRetries=3
