EDA_73: fix local configurations

--- a/v1/services/EmailService/src/main/resources/application.properties
+++ b/v1/services/EmailService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.http.port=8085
+%dev.quarkus.http.port=8085
 
 quarkus.kafka.devservices.enabled=false
 
@@ -8,7 +8,7 @@ mp.messaging.incoming.orders-in.topic=Orders
 mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.domain.orders.OrdersDeserializer
 mp.messaging.incoming.orders-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-kafka.bootstrap.servers=localhost:9092
+kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 
 # mailgun
 mailgun/mp-rest/url=https://api.mailgun.net/v3/${QUARKUS_MAILGUN_DOMAIN_NAME}
@@ -18,7 +18,7 @@ mailgun/mp-rest/maxRetries=3
 email.sender=${EMAIL_SENDER:dimosthenis.botsaris@arconsis.com}
 
 # users-api
-users-api/mp-rest/url=http://localhost:8081/users
+users-api/mp-rest/url=${USERS_SERVICE_URL:http://localhost:8081/users}
 users-api/mp-rest/connectTimeout=60000
 users-api/mp-rest/readTimeout=60000
 users-api/mp-rest/maxRetries=3
