--- a/v1/services/OrderService/src/main/resources/application.properties
+++ b/v1/services/OrderService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.http.port=8080
+%dev.quarkus.http.port=8080
 
 quarkus.kafka.devservices.enabled=false
 mp.messaging.outgoing.orders-out.connector=smallrye-kafka
