--- a/v1/services/UserService/src/main/resources/application.properties
+++ b/v1/services/UserService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.http.port=8081
+%dev.quarkus.http.port=8081
 ## Database
 quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:user-db}
 quarkus.datasource.username=${DB_USER:postgres}
@@ -14,13 +14,13 @@ mp.messaging.outgoing.users-out.connector=smallrye-kafka
 mp.messaging.outgoing.users-out.topic=Users
 mp.messaging.outgoing.users-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 mp.messaging.outgoing.users-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-kafka.producer.bootstrap.servers=localhost:9092
+kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 kafka.enable.idempotence=true
 #kafka.retries=2147483647
 kafka.acks=all
 kafka.client.id=users-service-producer
 
-kafka.bootstrap.servers=localhost:9092
+kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 
 ## Database Migrations
 quarkus.flyway.migrate-at-start=true
