--- a/v1/services/WarehouseService/src/main/resources/application.properties
+++ b/v1/services/WarehouseService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.http.port=8082
+%dev.quarkus.http.port=8082
 
 quarkus.kafka.devservices.enabled=false
 mp.messaging.outgoing.order-validation-out.connector=smallrye-kafka
@@ -18,13 +18,13 @@ mp.messaging.incoming.order-in.value.deserializer=com.arconsis.domain.orders.Ord
 mp.messaging.incoming.order-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 ## producer options
-kafka.producer.bootstrap.servers=localhost:9092
+kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 kafka.enable.idempotence=true
 #kafka.retries=2147483647
 kafka.acks=all
 kafka.client.id=warehouse-service-producer
 
-kafka.bootstrap.servers=localhost:9092
+kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 
 ## Database
 quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:warehouse-db}
