EDA-72 Move to Hibernate Reactive

--- a/v1/services/WarehouseService/src/main/resources/application.properties
+++ b/v1/services/WarehouseService/src/main/resources/application.properties
@@ -27,11 +27,12 @@ kafka.client.id=warehouse-service-producer
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 
 ## Database
-quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:warehouse-db}
+datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:warehouse-db}
+quarkus.datasource.reactive.url=vertx-reactive:${datasource.url}
 quarkus.datasource.username=${POSTGRES_USER:postgres}
 quarkus.datasource.password=${POSTGRES_PASSWORD:secret}
 quarkus.datasource.db-kind=postgresql
-quarkus.hibernate-orm.jdbc.timezone=UTC
+quarkus.datasource.jdbc=false
 quarkus.hibernate-orm.log.sql=true
 
 ## Database Migrations
