--- a/v1/services/OrderService/src/main/resources/application.properties
+++ b/v1/services/OrderService/src/main/resources/application.properties
@@ -31,11 +31,12 @@ kafka.client.id=order-service-producer
 kafka.bootstrap.servers=localhost:9092
 
 ## Database
-quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:orders-db}
+datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:orders-db}
+quarkus.datasource.reactive.url=vertx-reactive:${datasource.url}
 quarkus.datasource.username=${POSTGRES_USER:postgres}
 quarkus.datasource.password=${POSTGRES_PASSWORD:secret}
 quarkus.datasource.db-kind=postgresql
-quarkus.hibernate-orm.jdbc.timezone=UTC
+quarkus.datasource.jdbc=false
 quarkus.hibernate-orm.log.sql=true
 
 ## Database Migrations
