EDA-72: payments hibernate reactive

--- a/v3/services/EmailService/src/main/resources/application.properties
+++ b/v3/services/EmailService/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-quarkus.http.port=8085
+%dev.quarkus.http.port=8085
+
 quarkus.kafka.devservices.enabled=false
 quarkus.kafka-streams.application-id=email-service
 quarkus.kafka-streams.topics=Orders,Users
-quarkus.kafka-streams.application-server=localhost:8085
-quarkus.kafka-streams.bootstrap-servers=localhost:9092
-kafka.bootstrap-servers=localhost:9092
+quarkus.kafka-streams.application-server=${hostname:localhost}:${quarkus.http.port}
+quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:9092}
+
+kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
+
 # streams options
 kafka-streams.processing.guarantee=exactly_once
 kafka-streams.cache.max.bytes.buffering=10240
