EDA-69: merge shipment service to warehouse service

--- a/v3/services/WarehouseService/src/main/resources/application.properties
+++ b/v3/services/WarehouseService/src/main/resources/application.properties
@@ -2,7 +2,7 @@ quarkus.http.port=8082
 
 quarkus.kafka.devservices.enabled=false
 quarkus.kafka-streams.application-id=warehouse-service
-quarkus.kafka-streams.topics=Orders,OrdersValidations
+quarkus.kafka-streams.topics=Orders,OrdersValidations,Shipments
 quarkus.kafka-streams.application-server=localhost:8082
 quarkus.kafka-streams.bootstrap-servers=localhost:9092
 
