EDA_74: replace local vars

--- a/v3/services/OrderService/src/main/resources/application.properties
+++ b/v3/services/OrderService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.http.port=8080
+%dev.quarkus.http.port=8080
 
 quarkus.kafka.devservices.enabled=false
 mp.messaging.outgoing.orders-out.connector=smallrye-kafka
@@ -7,11 +7,11 @@ mp.messaging.outgoing.orders-out.value.serializer=io.quarkus.kafka.client.serial
 mp.messaging.outgoing.orders-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 quarkus.kafka-streams.application-id=order-service-consumer
 quarkus.kafka-streams.topics=Orders,OrdersValidations
-quarkus.kafka-streams.application-server=localhost:8080
-quarkus.kafka-streams.bootstrap-servers=localhost:9092
+quarkus.kafka-streams.application-server=${hostname:localhost}:${quarkus.http.port}
+quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:9092}
 
 # producer options
-kafka.producer.bootstrap.servers=localhost:9092
+kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 kafka.enable.idempotence=true
 #kafka.retries=2147483647
 kafka.acks=all
@@ -30,4 +30,4 @@ kafka-streams.consumer.heartbeat.interval.ms=200
 %test.kafka-streams.state.dir=target/data/kafka-data/stores
 
 
-kafka.bootstrap-servers=localhost:9092
+kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
