--- a/v3/services/WarehouseService/src/main/resources/application.properties
+++ b/v3/services/WarehouseService/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-quarkus.http.port=8082
+%dev.quarkus.http.port=8082
 
 quarkus.kafka.devservices.enabled=false
 quarkus.kafka-streams.application-id=warehouse-service
 quarkus.kafka-streams.topics=Orders,OrdersValidations,Shipments
-quarkus.kafka-streams.application-server=localhost:8082
-quarkus.kafka-streams.bootstrap-servers=localhost:9092
+quarkus.kafka-streams.application-server=${hostname:localhost}:${quarkus.http.port}
+quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:9092}
 
-kafka.bootstrap-servers=localhost:9092
+kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 
 # streams options
 kafka-streams.processing.guarantee=exactly_once
