--- a/v1/kubernetes/ingress.yaml
+++ b/v1/kubernetes/ingress.yaml
@@ -26,6 +26,13 @@ spec:
                 name: warehouse-service
                 port:
                   number: 3000
+          - path: /shipments
+            pathType: Prefix
+            backend:
+              service:
+                name: warehouse-service
+                port:
+                  number: 3000
           - path: /users
             pathType: Prefix
             backend:
