--- a/v2/services/UserService/src/main/resources/application.properties
+++ b/v2/services/UserService/src/main/resources/application.properties
@@ -1,13 +1,4 @@
 %dev.quarkus.http.port=8081
-## Database
-quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:user-db}
-quarkus.datasource.username=${DB_USER:postgres}
-quarkus.datasource.password=${DB_PASS:secret}
-quarkus.datasource.db-kind=postgresql
-quarkus.hibernate-orm.jdbc.timezone=UTC
-quarkus.hibernate-orm.log.sql=true
-#quarkus.hibernate-orm.sql-load-script=import-dev.sql
-#quarkus.hibernate-orm.database.generation=none
 
 quarkus.kafka.devservices.enabled=false
 mp.messaging.outgoing.users-out.connector=smallrye-kafka
@@ -22,8 +13,17 @@ kafka.client.id=users-service-producer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 
+## Database
+datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:payments-db}
+quarkus.datasource.reactive.url=vertx-reactive:${datasource.url}
+quarkus.datasource.username=${POSTGRES_USER:postgres}
+quarkus.datasource.password=${POSTGRES_PASSWORD:secret}
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc=false
+quarkus.hibernate-orm.log.sql=true
+
 ## Database Migrations
 quarkus.flyway.migrate-at-start=true
 #%test.quarkus.flyway.migrate-at-start=false
-quarkus.flyway.clean-at-start=true
+quarkus.flyway.clean-at-start=false
 quarkus.flyway.baseline-on-migrate=true
