--- a/v2/services/docker-compose.yml
+++ b/v2/services/docker-compose.yml
@@ -30,3 +30,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: root
+    volumes:
+      - postgres:/var/lib/postgresql/data
+
+volumes:
+  postgres: ~
