EDA-0: add quarkus debezium

--- a/v2/services/OrderService/src/main/resources/application.properties
+++ b/v2/services/OrderService/src/main/resources/application.properties
@@ -26,6 +26,9 @@ kafka.client.id=order-service-producer
 
 kafka.bootstrap.servers=localhost:9092
 
+## debezium
+quarkus.debezium-outbox.table-name = outbox_events
+
 ## Database
 datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:orders-db}
 quarkus.datasource.reactive.url=vertx-reactive:${datasource.url}
