--- a/v2/services/PaymentService/src/main/resources/application.properties
+++ b/v2/services/PaymentService/src/main/resources/application.properties
@@ -16,6 +16,9 @@ kafka.client.id=payment-service-producer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 
+## debezium
+quarkus.debezium-outbox.table-name = outbox_events
+
 ## Database
 datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:payments-db}
 quarkus.datasource.reactive.url=vertx-reactive:${datasource.url}
