--- a/v2/services/UserService/src/main/resources/application.properties
+++ b/v2/services/UserService/src/main/resources/application.properties
@@ -9,6 +9,9 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.jdbc=false
 quarkus.hibernate-orm.log.sql=true
 
+## debezium
+quarkus.debezium-outbox.table-name = outbox_events
+
 ## Database Migrations
 quarkus.flyway.migrate-at-start=true
 #%test.quarkus.flyway.migrate-at-start=false
