--- a/v2/.gitignore
+++ b/v2/.gitignore
@@ -56,12 +56,12 @@ yarn.lock
 # Crash log files
 crash.log
 
-# Exclude all .tfvars files, which are likely to contain sentitive data, such as
+# Exclude all .secret.tfvars files, which are likely to contain sentitive data, such as
 # password, private keys, and other secrets. These should not be part of version
 # control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 #
-*.tfvars
+*.secret.tfvars
 
 .terraform/**/*
 terraform.tfstate
