EDA-0: fix k8s secrets

--- a/v1/kubernetes/EmailService/temp-secret.yaml
+++ b/v1/kubernetes/EmailService/temp-secret.yaml
@@ -6,8 +6,8 @@ metadata:
   namespace: eshop-eda
 type: Opaque
 data:
-  KAFKA_BROKER: 
-  MAILGUN_API_KEY:
-  MAILGUN_DOMAIN:
+  KAFKA_BROKERS: 
+  QUARKUS_MAILGUN_API_KEY:
+  QUARKUS_MAILGUN_DOMAIN_NAME:
   HTTP_PORT:
-  
+  USERS_SERVICE_URL: 
