--- a/v1/kubernetes/OrderService/temp-secret.yaml
+++ b/v1/kubernetes/OrderService/temp-secret.yaml
@@ -7,10 +7,10 @@ metadata:
   namespace: eshop-eda
 type: Opaque
 data:
-  KAFKA_BROKER: 
-  DB_USER:
-  DB_PASS:
-  DB_HOST:
-  DB_PORT:
-  DB_NAME:
+  KAFKA_BROKERS: 
+  POSTGRES_USER:
+  POSTGRES_PASSWORD:
+  POSTGRES_HOST:
+  POSTGRES_PORT:
+  POSTGRES_DB:
   HTTP_PORT:
