--- a/v2/services/Dockerfile.postgres
+++ b/v2/services/Dockerfile.postgres
@@ -1,2 +1,2 @@
 FROM postgres:13.2
-COPY init_databases.sql /docker-entrypoint-initdb.d/init_databases.sql
+COPY init_database.sql /docker-entrypoint-initdb.d/init_database.sql
