--- a/v2/services/docker-compose.yml
+++ b/v2/services/docker-compose.yml
@@ -48,9 +48,25 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
-      POSTGRES_DB: root
+      POSTGRES_DB: postgres
     volumes:
       - postgres:/var/lib/postgresql/data
+
+  bastion:
+    build:
+      context: ./Bastion
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      ORDERS_CONNECTOR_JSON: '{"name":"orders-connector","config":{"connector.class":"io.debezium.connector.postgresql.PostgresConnector","plugin.name":"pgoutput","database.hostname":"postgres","database.port":"5432","database.user":"postgres","database.password":"secret","database.dbname":"orders-db","database.server.name":"postgres","table.include.list":"public.orders","database.history.kafka.bootstrap.servers":"kafka:9092","database.history.kafka.topic":"schema-changes.orders","slot.name": "orders_slot" } }'
+      WAREHOUSE_CONNECTOR_JSON: '{"name":"warehouse-connector","config":{"connector.class":"io.debezium.connector.postgresql.PostgresConnector","plugin.name":"pgoutput","database.hostname":"postgres","database.port":"5432","database.user":"postgres","database.password":"secret","database.dbname":"warehouse-db","database.server.name":"postgres","table.include.list":"public.inventory,public.shipments","database.history.kafka.bootstrap.servers":"kafka:9092","database.history.kafka.topic":"schema-changes.warehouse","slot.name": "warehouse_slot" } }'
+      PAYMENTS_CONNECTOR_JSON: '{"name":"payments-connector","config":{"connector.class":"io.debezium.connector.postgresql.PostgresConnector","plugin.name":"pgoutput","database.hostname":"postgres","database.port":"5432","database.user":"postgres","database.password":"secret","database.dbname":"payments-db","database.server.name":"postgres","table.include.list":"public.payments","database.history.kafka.bootstrap.servers":"kafka:9092","database.history.kafka.topic":"schema-changes.payments","slot.name": "payments_slot" } }'
+      DEBEZIUM_HOST: http://debezium:8083/connectors
+      DATABASE_URL: postgres://postgres:secret@postgres:5432/postgres
+      APP_ENV: production
+      PORT: 3000
+    restart: always
 
 volumes:
   postgres: ~
