EDA-18 Move to a single database in terraform. Improve Bastion code

--- a/v1/services/UserService/docker-compose.yml
+++ b/v1/services/UserService/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "5432:5432"
     restart: always
     environment:
-      POSTGRES_DB: user-db
+      POSTGRES_DB: users-db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
     volumes:
