--- a/v3/services/UserService/src/main/resources/application.properties
+++ b/v3/services/UserService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 %dev.quarkus.http.port=8081
 
 ## Database
-quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:user-db}
+quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:users-db}
 quarkus.datasource.username=${DB_USER:postgres}
 quarkus.datasource.password=${DB_PASS:secret}
 quarkus.datasource.db-kind=postgresql
