EDA-0: increase memory k8s

--- a/v1/kubernetes/PaymentService/deployment.yaml
+++ b/v1/kubernetes/PaymentService/deployment.yaml
@@ -22,6 +22,13 @@ spec:
         ports:
           - containerPort: 3000
             protocol: TCP
+        resources:
+          limits:
+            cpu: '500m'
+            memory: '1024Mi'
+          requests:
+            cpu: '500m'
+            memory: '1024Mi'
         envFrom:
         - secretRef:
             name: payments-service-secrets
