--- a/v1/services/EmailService/src/main/resources/application.properties
+++ b/v1/services/EmailService/src/main/resources/application.properties
@@ -9,6 +9,8 @@ mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.domain.orders.Or
 mp.messaging.incoming.orders-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
+kafka.allow.auto.create.topics = true
+kafka.auto.create.topics.enable = true
 
 # mailgun
 mailgun/mp-rest/url=https://api.mailgun.net/v3/${QUARKUS_MAILGUN_DOMAIN_NAME}
