--- a/v1/services/PaymentService/src/main/resources/application.properties
+++ b/v1/services/PaymentService/src/main/resources/application.properties
@@ -19,6 +19,8 @@ kafka.acks=all
 kafka.client.id=payment-service-producer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
+kafka.allow.auto.create.topics = true
+kafka.auto.create.topics.enable = true
 
 ## Database
 datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:payments-db}
