--- a/v1/kubernetes/EmailService/deployment.yaml
+++ b/v1/kubernetes/EmailService/deployment.yaml
@@ -22,6 +22,13 @@ spec:
         envFrom:
         - secretRef:
             name: email-service-secrets
+        resources:
+          limits:
+            cpu: '500m'
+            memory: '1024Mi'
+          requests:
+            cpu: '500m'
+            memory: '1024Mi'
         ports:
           - containerPort: 3000
             protocol: TCP       
