--- a/v1/kubernetes/UserService/deployment.yaml
+++ b/v1/kubernetes/UserService/deployment.yaml
@@ -22,6 +22,13 @@ spec:
         ports:
           - containerPort: 8080
             protocol: TCP
+        resources:
+          limits:
+            cpu: '500m'
+            memory: '1024Mi'
+          requests:
+            cpu: '500m'
+            memory: '1024Mi'
         envFrom:
         - secretRef:
             name: users-service-secrets
