--- a/v1/services/UserService/src/main/resources/application.properties
+++ b/v1/services/UserService/src/main/resources/application.properties
@@ -21,6 +21,8 @@ kafka.acks=all
 kafka.client.id=users-service-producer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
+kafka.allow.auto.create.topics = true
+kafka.auto.create.topics.enable = true
 
 ## Database Migrations
 quarkus.flyway.migrate-at-start=true
