--- a/v1/services/WarehouseService/src/main/resources/application.properties
+++ b/v1/services/WarehouseService/src/main/resources/application.properties
@@ -25,6 +25,8 @@ kafka.acks=all
 kafka.client.id=warehouse-service-producer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
+kafka.allow.auto.create.topics = true
+kafka.auto.create.topics.enable = true
 
 ## Database
 datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:warehouse-db}
