EDA-110: fix v1 tf

--- a/v1/services/EmailService/src/main/resources/application.properties
+++ b/v1/services/EmailService/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 %dev.quarkus.http.port=8085
 
 quarkus.kafka.devservices.enabled=false
+%prod.quarkus.ssl.native=true
 
 # Orders Topic
 mp.messaging.incoming.orders-in.connector=smallrye-kafka
@@ -11,6 +12,7 @@ mp.messaging.incoming.orders-in.key.deserializer=org.apache.kafka.common.seriali
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 kafka.allow.auto.create.topics = true
 kafka.auto.create.topics.enable = true
+kafka.security.protocol = SSL
 
 # mailgun
 mailgun/mp-rest/url=https://api.mailgun.net/v3/${QUARKUS_MAILGUN_DOMAIN_NAME}
