--- a/v1/services/OrderService/src/main/resources/application.properties
+++ b/v1/services/OrderService/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 %dev.quarkus.http.port=8080
 
 quarkus.kafka.devservices.enabled=false
+%prod.quarkus.ssl.native=true
+
 mp.messaging.outgoing.orders-out.connector=smallrye-kafka
 mp.messaging.outgoing.orders-out.topic=Orders
 mp.messaging.outgoing.orders-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
@@ -32,6 +34,7 @@ kafka.client.id=order-service-producer
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 kafka.allow.auto.create.topics = true
 kafka.auto.create.topics.enable = true
+kafka.security.protocol = SSL
 
 ## Database
 datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:orders-db}
