--- a/v1/services/WarehouseService/src/main/resources/application.properties
+++ b/v1/services/WarehouseService/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 %dev.quarkus.http.port=8082
 
 quarkus.kafka.devservices.enabled=false
+%prod.quarkus.ssl.native=true
+
 mp.messaging.outgoing.order-validation-out.connector=smallrye-kafka
 mp.messaging.outgoing.order-validation-out.topic=OrdersValidations
 mp.messaging.outgoing.order-validation-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
@@ -27,6 +29,7 @@ kafka.client.id=warehouse-service-producer
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 kafka.allow.auto.create.topics = true
 kafka.auto.create.topics.enable = true
+kafka.security.protocol = SSL
 
 ## Database
 datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:warehouse-db}
