--- a/v1/services/PaymentService/src/main/resources/application.properties
+++ b/v1/services/PaymentService/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 %dev.quarkus.http.port=8083
 
 quarkus.kafka.devservices.enabled=false
+%prod.quarkus.ssl.native=true
+
 mp.messaging.outgoing.payments-out.connector=smallrye-kafka
 mp.messaging.outgoing.payments-out.topic=Payments
 mp.messaging.outgoing.payments-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
@@ -21,6 +23,7 @@ kafka.client.id=payment-service-producer
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 kafka.allow.auto.create.topics = true
 kafka.auto.create.topics.enable = true
+kafka.security.protocol = SSL
 
 ## Database
 datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:payments-db}
