EDA-110: fix v1 aws

--- a/v1/services/UserService/src/main/resources/application.properties
+++ b/v1/services/UserService/src/main/resources/application.properties
@@ -25,7 +25,7 @@ kafka.client.id=users-service-producer
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
 kafka.allow.auto.create.topics = true
 kafka.auto.create.topics.enable = true
-kafka.security.protocol = SSL
+%prod.kafka.security.protocol = SSL
 
 ## Database Migrations
 quarkus.flyway.migrate-at-start=true
