EDA-116: improve status

--- a/v1/services/UserService/src/main/resources/application.properties
+++ b/v1/services/UserService/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 %dev.quarkus.http.port=8081
 ## Database
-quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:users-db}
-quarkus.datasource.username=${DB_USER:postgres}
-quarkus.datasource.password=${DB_PASS:secret}
+quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:users-db}
+quarkus.datasource.username=${POSTGRES_USER:postgres}
+quarkus.datasource.password=${POSTGRES_PASSWORD:secret}
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.jdbc.timezone=UTC
 quarkus.hibernate-orm.log.sql=true
