--- a/v1/kubernetes/UserService/temp-secret.yaml
+++ b/v1/kubernetes/UserService/temp-secret.yaml
@@ -7,9 +7,9 @@ metadata:
   namespace: eshop-eda
 type: Opaque
 data:
-  KAFKA_BROKERS: 
-  DB_USER:
-  DB_PASS:
-  DB_HOST:
-  DB_PORT:
-  DB_NAME:
+  KAFKA_BROKERS:
+  POSTGRES_USER:
+  POSTGRES_PASSWORD:
+  POSTGRES_HOST:
+  POSTGRES_PORT:
+  POSTGRES_DB:
