--- a/v2/kubernetes/EmailService/deployment.yaml
+++ b/v2/kubernetes/EmailService/deployment.yaml
@@ -22,6 +22,13 @@ spec:
         envFrom:
         - secretRef:
             name: email-service-secrets
+        resources:
+          limits:
+            cpu: '200m'
+            memory: '512Mi'
+          requests:
+            cpu: '200m'
+            memory: '512Mi'
         ports:
-          - containerPort: 3000
+          - containerPort: 8080
             protocol: TCP       
