--- a/v2/kubernetes/UserService/deployment.yaml
+++ b/v2/kubernetes/UserService/deployment.yaml
@@ -22,6 +22,13 @@ spec:
         ports:
           - containerPort: 8080
             protocol: TCP
+        resources:
+          limits:
+            cpu: '200m'
+            memory: '512Mi'
+          requests:
+            cpu: '200m'
+            memory: '512Mi'
         envFrom:
         - secretRef:
             name: users-service-secrets
