--- a/v2/kubernetes/WarehouseService/deployment.yaml
+++ b/v2/kubernetes/WarehouseService/deployment.yaml
@@ -20,8 +20,15 @@ spec:
         imagePullPolicy: Always
         image: eldimious/warehouse-eda-v1:latest
         ports:
-          - containerPort: 3000
+          - containerPort: 8080
             protocol: TCP
+        resources:
+          limits:
+            cpu: '200m'
+            memory: '512Mi'
+          requests:
+            cpu: '200m'
+            memory: '512Mi'
         envFrom:
         - secretRef:
             name: warehouse-service-secrets
