EDA-100: improve statuses

--- a/v2/services/EmailService/src/main/resources/application.properties
+++ b/v2/services/EmailService/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 %dev.quarkus.http.port=8085
 
 quarkus.kafka.devservices.enabled=false
+%prod.kafka.security.protocol = SSL
 
 # Orders Topic
 mp.messaging.incoming.orders-in.connector=smallrye-kafka
