--- a/v2/services/UserService/src/main/resources/application.properties
+++ b/v2/services/UserService/src/main/resources/application.properties
@@ -1,17 +1,18 @@
 %dev.quarkus.http.port=8081
 
 ## Database
-quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:users-db}
+datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:users-db}
+%dev.quarkus.datasource.reactive.url=vertx-reactive:${datasource.url}
+%prod.quarkus.datasource.reactive.url=${datasource.url}
 quarkus.datasource.username=${POSTGRES_USER:postgres}
 quarkus.datasource.password=${POSTGRES_PASSWORD:secret}
 quarkus.datasource.db-kind=postgresql
-quarkus.hibernate-orm.jdbc.timezone=UTC
+quarkus.datasource.jdbc=false
 quarkus.hibernate-orm.log.sql=true
-#quarkus.hibernate-orm.sql-load-script=import-dev.sql
-#quarkus.hibernate-orm.database.generation=none
+%prod.quarkus.datasource.reactive.postgresql.ssl-mode=allow
 
 ## Database Migrations
-quarkus.flyway.migrate-at-start=true
+quarkus.flyway.migrate-at-start=false
 #%test.quarkus.flyway.migrate-at-start=false
 quarkus.flyway.clean-at-start=false
 quarkus.flyway.baseline-on-migrate=true
